--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 body {
-    background-color: black;
+    background-color: bisque;
     font-family: Bai Jamjuree;
 }
 
 footer {
-   background-color: aliceblue;
-   color: black;
+   background-color: rgb(0, 0, 0);
+   color: rgb(255, 255, 255);
    position: fixed
    bottom: 0;
    width: 100%;
    height: 2rem;
 }
 
-  footer p{
+  footer p {
       text-align: center;
       font-size: 0.6rem;
       margin-top: 0.5rem;
