--- a/style.css
+++ b/style.css
@@ -1,7 +1,52 @@
-body {
-    background-color: bisque;
-    font-family: Bai Jamjuree;
+:root {
+  --text-color: #dbe4ef;
+  --card-front-color: #ffd1db;
+  --card-back-color: #7d01ff;
 }
+
+body {
+   background: url("img/bg-desktop.webp")
+   font-family: Bai jamjuree;
+
+}
+
+#container {
+  display: flex;
+}
+.cartao{
+  margin: 1rem 1rem;
+  background-color: rgb(146,  151, 255);
+  height: 20rem;
+  flex-grow: 1;
+  flex-basis: calc(33% -5rem);
+}
+
+.cartao__conteudo {
+   text__alling: center;
+   height: 100%;
+}
+
+.cartao__conteudo h3 {
+    background-color: tomato;
+    text-align: left;
+    padding: 0.5rem;
+    position: absolute;
+    margin: 0.6rem;
+    border-radius: 0.6rem;
+    font-size: 1vw;
+    color: var(--text-color);
+    border: 1px solid var(--text-color);
+}
+.cartao__conteudo__pergunta p {
+  color: var(--text-color);
+  font-weight: 500;
+}
+
+.cartao__conteudo__resposta p {
+  color: var(--card-back-color);
+  font-weight: 700;
+}
+
 
 footer {
    background-color: white;
