--- a/style.css
+++ b/style.css
@@ -1,33 +1,33 @@
 :root {
-  --text-color: #dbe4ef;
-  --card-front-color: #ffd1db;
-  --card-back-color: #7d01ff;
+    --text-color: #DBE4EF;
+    --card-front-color: #144480;
+    --card-back-color: #00F4BF;
 }
 
 body {
-   background: url("img/bg-desktop.webp")
-   font-family: Bai jamjuree;
-
+    background: url("img/bg-desktop.webp");
+    font-family: Bai Jamjuree;
 }
 
 #container {
-  display: flex;
+    display: flex;
 }
-.cartao{
-  margin: 1rem 1rem;
-  background-color: rgb(146,  151, 255);
-  height: 20rem;
-  flex-grow: 1;
-  flex-basis: calc(33% -5rem);
+
+.cartao {
+    margin: 1rem 1rem;
+    background-color: aqua;
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33% -6rem);
 }
 
 .cartao__conteudo {
-   text__alling: center;
-   height: 100%;
+    text-align: center;
+    height: 100%;
+    background-color: var(--card-front-color);
 }
 
 .cartao__conteudo h3 {
-    background-color: tomato;
     text-align: left;
     padding: 0.5rem;
     position: absolute;
@@ -37,28 +37,28 @@ body {
     color: var(--text-color);
     border: 1px solid var(--text-color);
 }
+
 .cartao__conteudo__pergunta p {
-  color: var(--text-color);
-  font-weight: 500;
+    color: var(--text-color);
+    font-weight: 500;
 }
 
 .cartao__conteudo__resposta p {
-  color: var(--card-back-color);
-  font-weight: 700;
+    color: var(--card-back-color);
+    font-weight: 700;
 }
-
 
 footer {
-   background-color: white;
-   color: black;
-   position: fixed
-   bottom: 0;
-   width: 100%;
-   height: 2rem;
+    background-color: black;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 2rem;
 }
 
-  footer p {
-      text-align: center;
-      font-size: 0.6rem;
-      margin-top: 0.5rem;
-    }
+footer p {
+    text-align: center;
+    font-size: 0.6rem;
+    margin-top: 0.5rem;
+} 
